* Wed Nov 21 2018 Adam Yohrling <adam.yohrling@onyxpoint.com> - 0.1.0
- Added OEL support

* Mon Nov 05 2018 Liz Nemsick <lnemsick-simp@gmail.com> - 0.1.0
- Update to Hiera 5

* Mon Jul 30 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.1.0
- added take ownership

* Mon Jul 23 2018 Chris Tessmer <chris.tessemr@onyxpoint.com> - 0.1.0
- initial module